# dexterous-hand-archived

./: .gitignore  IMPLEMENTATION_REVIEW_2026-07-14.md  README.md  lit_review_2026-07-14.md  main.py  pyproject.toml  quick.md
assets/shadow_hand/: runpod_full_runs.md  runpod_grasp_full.md  runpod_overnight_chain.md  runpod_peg_full.md  runpod_round18_contact_fix.md  runpod_sanity_all_tasks.md
dexterous_hand/: config.py
dexterous_hand/curriculum/: callbacks.py
dexterous_hand/envs/: _scene_common.py  grasp_env.py  mjx_vec_env.py  peg_env.py  peg_scene_builder.py  pickplace_env.py  pickplace_scene_builder.py  reorient_env.py  reorient_scene_builder.py  scene_builder.py
dexterous_hand/envs/cpu/: peg_env.py  reorient_env.py
dexterous_hand/envs/gpu/: grasp_env.py  peg_env.py  reorient_env.py
dexterous_hand/policies/: clamped_actor.py
dexterous_hand/rewards/: grasp_reward.py  peg_reward.py  pickplace_reward.py  reorient_reward.py
dexterous_hand/rewards/gpu/: grasp_reward.py  peg_reward.py  reorient_reward.py
dexterous_hand/utils/: mjx_helpers.py  mujoco_helpers.py
dexterous_hand/utils/gpu/: mjx_helpers.py  quaternion.py
docs/archive/: audit_2026-06-10.md
scripts/: audit_feasibility.py  audit_geometry.py  audit_grasp_lift.py  audit_peg_slide_z.py  audit_spawn_collisions.py  audit_summary.py  check_reward_gradient.py  diagnose_grasp_regression.py  eval_policy.py  mjx_parity_check.py  render_grasp_diagnostic.py  render_peg_diagnostic.py  render_peg_transport.py  render_policy_rollout.py  render_spawn_collisions.py  tune_grip_bias.py
scripts/debug/: debug_mjx_memory.py  reward_probe.py
scripts/training/: _common.py  resume_grasp.py  resume_peg.py  resume_reorient.py  train_grasp.py  train_peg.py  train_pickplace.py  train_reorient.py
scripts/training/gpu/: resume_grasp.py  resume_peg.py  resume_reorient.py  train_grasp.py  train_peg.py  train_reorient.py
tests/: test_config.py  test_curriculum.py  test_env_smoke.py  test_geometry.py  test_grasp_env.py  test_mujoco_helpers.py  test_peg_env.py  test_pickplace_env.py  test_pickplace_reward.py  test_quaternion.py  test_reorient_env.py  test_rewards.py
tests/cpu/: test_peg_env.py
tests/gpu/: test_peg_env.py
